feat: add colors game and update build configurations
- Introduced a new colors game to help users learn colors in English and Arabic
- Updated Android build configurations to use Gradle 8.13 and Java 11
- Modified VS Code settings for better project setup

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,13 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+    ext {
+        buildToolsVersion = "33.0.0"
+        minSdkVersion = 21
+        compileSdkVersion = 33
+        targetSdkVersion = 33
+        androidPluginVersion = "8.3.0"
+    }
+}
