chore: add Gradle problems report directory to .gitignore
To prevent unnecessary files from being tracked in version control, the directory `android/build/reports/problems/` has been added to the .gitignore file. This directory is used by Gradle to store problem reports, which are typically not needed in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ migrate_working_dir/
 .pub/
 /build/
 
+# Gradle problems report
+android/build/reports/problems/
+
 # Symbolication related
 app.*.symbols
 
