--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   supabase_flutter: ^2.3.4
   flutter_dotenv: ^5.1.0
 
+  logging: ^1.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
