--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Create dummy .env file
+        run: echo "" > .env # Creates an empty .env file.env
+
       # 5. (Optional but Recommended) Run static analysis
       - name: Analyze project source
         run: flutter analyze
