--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "cmake.sourceDirectory": "C:/Users/wawao/OneDrive/Bureau/PFA/pfa/windows/flutter",
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "cSpell.words": [
+        "Sarabun"
+    ]
 }
