--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
-  riverpod: ^2.5.1
+  riverpod: ^2.6.1
 
   # Supabase dependencies
   supabase_flutter: ^2.8.4
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^5.2.1
 
-  logging: ^1.2.0
+  logging: ^1.3.0
+  supabase_auth_ui: ^0.5.5
 
 dev_dependencies:
   flutter_test:
