--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 
   logging: ^1.3.0
   supabase_auth_ui: ^0.5.5
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/avatars/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
