--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
-  riverpod: ^2.6.1
 
   # Supabase dependencies
   supabase_flutter: ^2.8.4
@@ -47,6 +46,7 @@ dependencies:
   logging: ^1.3.0
   supabase_auth_ui: ^0.5.5
   collection: ^1.18.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
