--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Analyze project source
         run: flutter analyze
 
+      - name: Check formatting
+        run: dart format --output=none --set-exit-if-changed .
+
       # 6. Run unit tests
       - name: Run unit tests
         run: flutter test
