--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   # Supabase dependencies
   supabase_flutter: ^2.9.0
   flutter_dotenv: ^5.2.1
+  flutter_tts: ^4.2.2
+  audioplayers: ^6.4.0
+
 
   logging: ^1.3.0
   supabase_auth_ui: ^0.5.5
@@ -73,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/avatars/
+    - assets/audio/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
