--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   supabase_auth_ui: ^0.5.5
   collection: ^1.19.1
   flutter_riverpod: ^2.6.1
+  google_mlkit_face_detection: ^0.10.0
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
