--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  fl_chart: ^0.71.0
+  fl_chart: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,8 +51,9 @@ dependencies:
   supabase_auth_ui: ^0.5.5
   collection: ^1.19.1
   flutter_riverpod: ^2.6.1
-  shared_preferences: 2.5.3
-  introduction_screen: 3.1.17
+  shared_preferences: ^2.5.3
+  introduction_screen: ^3.1.17
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
