--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   shared_preferences: ^2.5.3
   introduction_screen: ^3.1.17
   flutter_animate: ^4.5.2
+  confetti: ^0.8.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +82,7 @@ flutter:
     - assets/images/
     - assets/images/avatars/
     - assets/audio/
+    - assets/animations/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
