--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,8 @@ dependencies:
   confetti: ^0.8.0
   lottie: ^3.3.1
   cached_network_image: ^3.4.1
-  google_mlkit_face_detection: ^0.10.0
-  camera: ^0.10.5+9
+  google_mlkit_face_detection: ^0.13.1
+  camera: ^0.11.1
 
 dev_dependencies:
   flutter_test:
