--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,8 @@ jobs:
       # 1. Checkout the code from the PR branch
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       # 2. Set up Java (Required by Flutter SDK/Android build tools)
       - name: Set up Java
@@ -43,3 +45,8 @@ jobs:
       # 6. Run unit tests
       - name: Run unit tests
         run: flutter test
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
