ci(workflows): add coverage flag to flutter test command
Enable code coverage reporting by adding the `--coverage` flag to the `flutter test` command in the GitHub Actions workflow. This ensures that coverage metrics are collected during unit tests, which can be utilized by SonarQube for further analysis.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -44,7 +44,7 @@ jobs:
 
       # 6. Run unit tests
       - name: Run unit tests
-        run: flutter test
+        run: flutter test --coverage
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
