ci(sonar): add Dart coverage report path to Sonar properties
This commit adds the `sonar.dart.coverage.reportPaths` property to the SonarQube configuration file to enable Dart code coverage reporting. The coverage report will be read from the `coverage/lcov.info` file.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,7 @@ sonar.organization=younesmakhlouf
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
+sonar.dart.coverage.reportPaths=coverage/lcov.info
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
