--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,23 @@
 sonar.projectKey=YounesMakhlouf_PFA
 sonar.organization=younesmakhlouf
 
-
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=PFA
-#sonar.projectVersion=1.0
+sonar.projectName=PFA
+sonar.projectVersion=1.0
 
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
-sonar.dart.coverage.reportPaths=coverage/lcov.info
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.exclusions=**/generated_plugin_registrant.dart, **/*.g.dart, **/*.freezed.dart, android/**, ios/**, build/**, .dart_tool/**, .idea/**, coverage/**, test/**.dart_tool/**, macos/**, windows/**, linux/**, web/**
+
+sonar.tests=test
+
+sonar.language=dart
+
+sonar.sourceEncoding=UTF-8
+
+sonar.dart.coverage.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=tests.output
