ci: update sonar.sources path to 'lib'

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=younesmakhlouf
 sonar.projectName=PFA
 sonar.projectVersion=1.0
 
-sonar.sources=.
+sonar.sources=lib
 
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
