ci(workflows): add test execution report and debug steps for unit tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,3 +20,4 @@ sonar.language=dart
 sonar.sourceEncoding=UTF-8
 
 sonar.dart.coverage.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=tests.output
