--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,4 +19,4 @@ sonar.language=dart
 
 sonar.sourceEncoding=UTF-8
 
-sonar.dart.coverage.reportPaths=coverage/lcov.info
+sonar.dart.lcov.reportPaths=coverage/lcov.info
