config(sonar): exclude generated localization files
Exclude generated localization files (`lib/l10n/app_localizations.dart` and `lib/l10n/app_localizations_*.dart`) from SonarQube analysis.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
 
-sonar.exclusions=**/generated_plugin_registrant.dart, **/*.g.dart, **/*.freezed.dart, android/**, ios/**, build/**, .dart_tool/**, .idea/**, coverage/**, test/**.dart_tool/**, macos/**, windows/**, linux/**, web/**
+sonar.exclusions=**/generated_plugin_registrant.dart, **/*.g.dart, **/*.freezed.dart, android/**, ios/**, build/**, .dart_tool/**, .idea/**, coverage/**, test/**.dart_tool/**, macos/**, windows/**, linux/**, web/**, lib/l10n/app_localizations.dart, lib/l10n/app_localizations_*.dart
 
 sonar.tests=test
 
